--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = arduino-libraries/Servo@^1.1.8
+lib_deps =
+    kosme/arduinoFFT@^1.6.0
+    arduino-libraries/Servo@^1.1.8
