--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
+monitor_speed = 115200
 lib_deps =
     kosme/arduinoFFT@^1.6.0
     arduino-libraries/Servo@^1.1.8
